# rust-mavlink

./: Cargo.toml
examples/stm32_f4_hal/: Cargo.toml
examples/stm32_f4_hal/.cargo/: config.toml
examples/stm32_f4_hal/src/: main.rs
src/: embedded.rs  lib.rs
